--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -55,7 +55,7 @@
 			<li> </li>
 		</ul>
 		<div class="split"></div>
-		<button class="logout-button" th:text="#{HQPD_B_LOGOUT}"></button>
+		<button class="logout-button" th:text="#{HQP_B_LOGOUT}"></button>
 	</div>
 </div>
 <div style="width:100%;height:5px;opacity:0;"></div>
@@ -74,11 +74,11 @@
 	<div style="margin-top:138px;">
 		<img src="/portal/img/popup/alert.png">
 	</div>
-	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{HQPD_M_SESSION_EXPIRED}"></div>
-	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{HQPD_M_ERROR}"></div>
+	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{HQP_M_SESSION_EXPIRED}"></div>
+	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{HQP_M_ERROR}"></div>
 	<div style="width:auto; height:220px; background-color: #f9f9f9; margin: 40px 40px 0 40px;">
 		<div style="height: 30px;"></div>
-		<button id="BTN_goMain" class="gomain-button"><span th:text="#{HQPD_B_GO_MAIN}"></span> <img src="/portal/img/common/arrow_right.png"></button>
+		<button id="BTN_goMain" class="gomain-button"><span th:text="#{HQP_B_GO_MAIN}"></span> <img src="/portal/img/common/arrow_right.png"></button>
 	</div>
 </div>
 
