--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/schedule/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/schedule/list.html
@@ -6,20 +6,20 @@
 	
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_AP_SCHEDULE}"></div>
+		<div class="block-title" th:text="#{HQP_T_AP_SCHEDULE}"></div>
 		<div class="block-button-area">
-			<button id="BTN_download" type="button" th:text="#{HQPD_B_DOWNLOAD}"></button><!-- Download -->
-			<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button>
+			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
+			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>
 		</div>
 	</div>
 	<div class="split-row"></div>
 	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-		<table class="condition table-fixed">
+		<table class="condition">
 			<tbody>
 				<tr>
-					<th th:text="#{HQPD_L_PERIOD}"></th><!-- Period -->
+					<th th:text="#{HQP_L_PERIOD}"></th><!-- Period -->
 					<td>
 						<div class="input-area">
 							<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
@@ -34,14 +34,14 @@
 	<div class="split-row"></div>
 	
 	<div class="condition-area">
-		<table class="condition table-fixed">
+		<table class="condition">
 			<thead>
 		        <tr>
-		            <th th:text="#{HQPD_L_AP_SCHEDULE_001}"></th>
-		            <th th:text="#{HQPD_L_AP_SCHEDULE_002}"></th>                        
-		            <th th:text="#{HQPD_L_AP_SCHEDULE_003}"></th>
-		            <th th:text="#{HQPD_L_AP_SCHEDULE_004}"></th>
-		            <th th:text="#{HQPD_L_AP_SCHEDULE_005}"></th>
+		            <th th:text="#{HQP_L_AP_SCHEDULE_001}"></th>
+		            <th th:text="#{HQP_L_AP_SCHEDULE_002}"></th>                        
+		            <th th:text="#{HQP_L_AP_SCHEDULE_003}"></th>
+		            <th th:text="#{HQP_L_AP_SCHEDULE_004}"></th>
+		            <th th:text="#{HQP_L_AP_SCHEDULE_005}"></th>
 		        </tr>
 		     </thead>
 		     <tbody>
@@ -78,10 +78,10 @@
 			scrollY: 100,
 			//fixedColumns: { leftColumns: 8 },
 			columns : [
-				{data: "SALEDT", title: "[[#{HQPD_L_AP_SCHEDULE_006}]]"},//매입월		
-				{data: "BUDAT", title: "[[#{HQPD_L_AP_SCHEDULE_007}]]"},//입금일자
-				{data: "GUBUN", title: "[[#{HQPD_L_AP_SCHEDULE_008}]]"},//구분
-				{data: "TOTAL", title: "[[#{HQPD_L_AP_SCHEDULE_009}]]", className: "right"}//금액
+				{data: "SALEDT", title: "[[#{HQP_L_AP_SCHEDULE_006}]]"},//매입월		
+				{data: "BUDAT", title: "[[#{HQP_L_AP_SCHEDULE_007}]]"},//입금일자
+				{data: "GUBUN", title: "[[#{HQP_L_AP_SCHEDULE_008}]]"},//구분
+				{data: "TOTAL", title: "[[#{HQP_L_AP_SCHEDULE_009}]]", className: "right"}//금액
 			],
 			ajax: {
 				url: "/portal/iv/hq/parts/domestic/accounts/ap/schedule/list/data",
@@ -113,19 +113,19 @@
 						
 						if (JpUtilsString.equals(blart, "DA") || JpUtilsString.equals(blart, "DZ"))//정상
 						{
-							gubun = "[[#{HQPD_L_AP_SCHEDULE_001}]]";
+							gubun = "[[#{HQP_L_AP_SCHEDULE_001}]]";
 						}
 						else if (JpUtilsString.equals(blart, "B1") || JpUtilsString.equals(blart, "KD"))//상계
 						{
-							gubun = "[[#{HQPD_L_AP_SCHEDULE_002}]]";
+							gubun = "[[#{HQP_L_AP_SCHEDULE_002}]]";
 						}
 						else if (JpUtilsString.equals(blart, "RV"))//반납
 						{
-							gubun = "[[#{HQPD_L_AP_SCHEDULE_004}]]";
+							gubun = "[[#{HQP_L_AP_SCHEDULE_004}]]";
 						}
 						else if (JpUtilsString.isEmpty(blart))//연체
 						{
-							gubun = "[[#{HQPD_L_AP_SCHEDULE_003}]]";
+							gubun = "[[#{HQP_L_AP_SCHEDULE_003}]]";
 						};
 						
 						list[i].GUBUN = gubun;
