--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/alternative_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/alternative_list.html
@@ -14,7 +14,7 @@
 </div>	
 <div class="condition-area">
 <form id="FORM_search" name="FORM_search">
-<table class="condition table-fixed">
+<table class="condition">
 	<tbody>
 		<tr>
 			<th th:text="#{DIVUK_LB_0042}"></th><!--Part No.  -->
