--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/applied_model_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/applied_model_list.html
@@ -6,20 +6,20 @@
 
 <th:block layout:fragment="content">
 <div class="block-header">
-	<div class="block-title" th:text="#{HQPD_T_APPLIED_MODELS}"></div><!-- Applied Models  -->
+	<div class="block-title" th:text="#{HQP_T_APPLIED_MODELS}"></div><!-- Applied Models  -->
 	<div class="block-button-area">
-		<button id="BTN_download" type="button" th:text="#{HQPD_B_DOWNLOAD}"></button><!-- Download -->
-		<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->		
+		<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
+		<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->		
 	</div>		
 </div>	
 
 <div class="condition-area">
 <form id="FORM_search" name="FORM_search" onsubmit="return false;">
 <input type="hidden" name="FLAG" id="FLAG" value="S"><!-- Sub Item List의 로딩시 Search를 위한 flag-->
-<table class="condition table-fixed">
+<table class="condition">
 	<tbody>
 		<tr>
-			<th th:text="#{HQPD_L_PART_NO}"></th><!--Part No.  -->
+			<th th:text="#{HQP_L_PART_NO}"></th><!--Part No.  -->
 			<td>
 				<div class="input-area">
 					<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" th:value="${pPartNo}" style="text-transform: uppercase;">
@@ -54,8 +54,8 @@ $(function(){
 		ordering: true, 
 		scrollY: 100,
 		columns : [					
-			{data: "SEQ", 		title: "[[#{HQPD_L_SEQ}]]"	},	//Seq.
-			{data: "MAKTX", 	title: "[[#{HQPD_L_MODEL}]]"	},	//Model
+			{data: "SEQ", 		title: "[[#{HQP_L_SEQ}]]"	},	//Seq.
+			{data: "MAKTX", 	title: "[[#{HQP_L_MODEL}]]"	},	//Model
 			{data: "MATNR", 	title: "MATNR"	},	
 			{data: "MDESC", 	title: "MDESC"	},	
 			{data: "MVGR3", 	title: "MVGR3"	},	
