--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_item_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_item_list.html
@@ -11,18 +11,18 @@
 	}  
 	</style>
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_SUBSTITUTION_PARTS}"></div><!-- Substitution Parts -->
+		<div class="block-title" th:text="#{HQP_T_SUBSTITUTION_PARTS}"></div><!-- Substitution Parts -->
 		<div class="block-button-area">
-			<button id="BTN_download" type="button" th:text="#{HQPD_B_DOWNLOAD}"></button><!-- Download -->
-			<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->
+			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
+			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
 		</div>		
 	</div>	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search" onsubmit="return false;">
-	<table class="condition table-fixed">
+	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{HQPD_L_PART_NO}"></th><!--Part No  -->
+				<th th:text="#{HQP_L_PART_NO}"></th><!--Part No  -->
 				<td>
 					<div class="input-area">
 						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" th:value="${pPartNo}" style="text-transform: uppercase;">
@@ -71,9 +71,9 @@
 						return '<input type="radio" name="RAD_MATNR" id="RAD_MATNR" class="custom-ui" value="' + row.MATNR + '" onchange="syncInput(this)"><label for="RAD_MATNR"></label>';// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},			
-				{name: "MATNR", 	data: "MATNR", 		title: "[[#{HQPD_L_PART_NO}]]"	},	// Part No
-				{name: "MAKTX1", 	data: "MAKTX1", 	title: "[[#{HQPD_L_DESCRIPTION}]]"	},	// Part No Desc
-				{name: "AVA_FLAG", 	data: "AVA_FLAG", 	title: "[[#{HQPD_L_AVAILABILITY}]]"	},	// Availability			
+				{name: "MATNR", 	data: "MATNR", 		title: "[[#{HQP_L_PART_NO}]]"	},	// Part No
+				{name: "MAKTX1", 	data: "MAKTX1", 	title: "[[#{HQP_L_DESCRIPTION}]]"	},	// Part No Desc
+				{name: "AVA_FLAG", 	data: "AVA_FLAG", 	title: "[[#{HQP_L_AVAILABILITY}]]"	},	// Availability			
 				{name: "SEQ", 		data: "SEQ", 		title: "SEQ(Hidden)"	},
 				{name: "LABST1", 	data: "LABST1", 	title: "LABST1(Hidden)"	},
 				{name: "ITCCD", 	data: "ITCCD", 		title: "ITCCD(Hidden)"	}			
@@ -175,7 +175,7 @@
 	    
 	    if (pPartNo.length < 1)
 	    {
-			alert("[[#{HQPD_M_EMPTY_PARTS_NO}]]");//Please input Part No.
+			alert("[[#{HQP_M_EMPTY_PARTS_NO}]]");//Please input Part No.
 	    	rtnValue = -1;
 	   	}
 	    
