--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
@@ -16,19 +16,19 @@
 		<div class="dropzone-body dropzone-click-zone">
 			<div class="dropzone-click-zone" style="height:40.5px"></div>
 			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
-			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQPD_T_HOW_TO_UPLOAD_SIMULATION}"></div>
+			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_HOW_TO_UPLOAD_SIMULATION}"></div>
 		</div>
 		<div class="dropzone-bottom dropzone-click-zone">
-			<button type="button" onclick="UploadModal.hide()">[[#{HQPD_B_CANCEL}]]</button>
+			<button type="button" onclick="UploadModal.hide()">[[#{HQP_B_CANCEL}]]</button>
 		</div>
 	</div>
 	<!-- Modal for upload simulation -->
 
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_ORDER_CREATE}"></div>
+		<div class="block-title" th:text="#{HQP_T_ORDER_CREATE}"></div>
 		<div class="block-button-area">
-			<button id="BTN_create" type="button" th:text="#{HQPD_B_CREATE}"></button>
-			<button id="BTN_shoppingCart" type="button" th:text="#{HQPD_B_SHOPPING_CART}"></button>
+			<button id="BTN_create" type="button" th:text="#{HQP_B_CREATE}"></button>
+			<button id="BTN_shoppingCart" type="button" th:text="#{HQP_B_SHOPPING_CART}"></button>
 		</div>
 	</div>
 
@@ -60,66 +60,66 @@
 	<input type="hidden" id="tmpShippingCondition" name="tmpShippingCondition"/><!-- Shipping Condition 변경 시 이전 값을 저장해 두기 위한 용도 -->
 	<input type="hidden" id="tmpShippingConditionName" name="tmpShippingConditionName"/><!-- Shipping Condition 변경 시 이전 값을 저장해 두기 위한 용도 -->
 	
-	<table class="condition table-fixed">
+	<table class="condition">
 		<tbody>
 			<tr>
 				<th colspan="4">
 					<div class="input-area">
 						<input type="radio" class="custom-ui" id="docType1" name="docType" value="C" checked />
-						<label th:text="#{HQPD_L_ORDER}"></label>
+						<label th:text="#{HQP_L_ORDER}"></label>
 						&nbsp;&nbsp;
 						<input type="radio" class="custom-ui" id="docType2" name="docType" value="A" />
-						<label th:text="#{HQPD_L_INQUIRY}"></label>
+						<label th:text="#{HQP_L_INQUIRY}"></label>
 					</div>
 				</th>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_ORDER_TYPE}"></th><!-- Order Type -->
+				<th th:text="#{HQP_L_ORDER_TYPE}"></th><!-- Order Type -->
 				<td>
 					<div class="input-area order-type"></div>
 				</td>
-				<th th:text="#{HQPD_L_SHIP_TO_PARTY}"></th><!-- Ship To Party -->
+				<th th:text="#{HQP_L_SHIP_TO_PARTY}"></th><!-- Ship To Party -->
 				<td>
-					<div><button id="BTN_shipToParty" type="button" th:text="#{HQPD_B_GET_DATA}" class="small_button"></button></div>
+					<div><button id="BTN_shipToParty" type="button" th:text="#{HQP_B_GET_DATA}" class="small_button"></button></div>
 					<div id="AREA_shipToAddress"></div>					
 				</td>
 			</tr>
 			<tr>
 				<th>
-					<div th:text="#{HQPD_L_PO_NO}"></div><img src="/portal/img/icon_required.png" class="required" />
+					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon_required.png" class="required" />
 				</th><!-- Customer P.O. Number -->
 				<td>
 					<div class="input-area">
 						<input type="text" id="poNo" name="poNo" class="custom-ui"/>
 					</div>
 				</td>
-				<th th:text="#{HQPD_L_SHIPPING_INFO}"></th><!-- Shipping Info -->
+				<th th:text="#{HQP_L_SHIPPING_INFO}"></th><!-- Shipping Info -->
 				<td>
-					<div><button id="BTN_shippingInfo" type="button" th:text="#{HQPD_B_GET_DATA}" class="small_button"></button></div><span id="AREA_shippingCondition"></span>
+					<div><button id="BTN_shippingInfo" type="button" th:text="#{HQP_B_GET_DATA}" class="small_button"></button></div><span id="AREA_shippingCondition"></span>
 				</td>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_RDD}"></th><!-- Request Delivery Date -->
+				<th th:text="#{HQP_L_RDD}"></th><!-- Request Delivery Date -->
 				<td>
 					<div class="input-area">
 						<input type="text" id="rdd" name="rdd" class="custom-ui" readonly />
 					</div>
 				</td>
-				<th th:text="#{HQPD_L_COMPLETE_DELIVERY}"></th><!-- Complete Delivery -->
+				<th th:text="#{HQP_L_COMPLETE_DELIVERY}"></th><!-- Complete Delivery -->
 				<td>
 					<div class="input-area">
 						<input type="radio" class="custom-ui" id=compleDelivery1 name="compleDelivery" value="X"/>
-						<label for="compleDelivery1" th:text="#{HQPD_L_YES}"></label>
+						<label for="compleDelivery1" th:text="#{HQP_L_YES}"></label>
 
 						<div class="split2"></div>
 
 						<input type="radio" class="custom-ui" id="compleDelivery2" name="compleDelivery" value="" checked/>
-						<label for="compleDelivery2" th:text="#{HQPD_L_NO}"></label>
+						<label for="compleDelivery2" th:text="#{HQP_L_NO}"></label>
 					</div>
 				</td>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_REMARKS}"></th><!-- Remarks -->
+				<th th:text="#{HQP_L_REMARKS}"></th><!-- Remarks -->
 				<td colspan="3">
 					<input type="text" id="remark" name="remark" class="custom-ui"/>
 				</td>
@@ -132,30 +132,30 @@
 
 	<div class="grid-info">
 		<div class="block-button-area">
-			<button id="BTN_addRow" type="button">[[#{HQPD_B_ADD}]]</button>
+			<button id="BTN_addRow" type="button">[[#{HQP_B_ADD}]]</button>
 			<div class="split"></div>
-			<button id="BTN_deleteRow" type="button">[[#{HQPD_B_DELETE}]]</button>
+			<button id="BTN_deleteRow" type="button">[[#{HQP_B_DELETE}]]</button>
 			<div class="split"></div>
-			<button id="BTN_simulation" type="button">[[#{HQPD_B_SIMULATION}]]</button>
+			<button id="BTN_simulation" type="button">[[#{HQP_B_SIMULATION}]]</button>
 			<div class="split"></div>
-			<button id="BTN_upload" type="button">[[#{HQPD_B_UPLOAD}]]</button>
+			<button id="BTN_upload" type="button">[[#{HQP_B_UPLOAD}]]</button>
 			<div class="split"></div>
-			<button id="BTN_download" type="button">[[#{HQPD_B_DOWNLOAD}]]</button>
+			<button id="BTN_download" type="button">[[#{HQP_B_DOWNLOAD}]]</button>
 			<div class="split"></div>
-			<button id="BTN_priceInfo" type="button">[[#{HQPD_B_PRICE_INFO}]]</button>
+			<button id="BTN_priceInfo" type="button">[[#{HQP_B_PRICE_INFO}]]</button>
 			<div class="split"></div>
-			<button id="BTN_errorReport" type="button">[[#{HQPD_B_ERROR_REPORT}]]</button>			
+			<button id="BTN_errorReport" type="button">[[#{HQP_B_ERROR_REPORT}]]</button>			
 		</div>
 		<div class="grid-total">
-			<span th:text="#{HQPD_T_TOTAL_AMOUNT}"></span>
+			<span th:text="#{HQP_T_TOTAL_AMOUNT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="totalAmount"></span>
 			<div class="split2"></div>
-			<span th:text="#{HQPD_T_CREDIT}"></span>
+			<span th:text="#{HQP_T_CREDIT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="credit"></span>
 			<div class="split2"></div>
-			<span th:text="#{HQPD_T_ESTIMATE_WEIGHT}"></span>
+			<span th:text="#{HQP_T_ESTIMATE_WEIGHT}"></span>
 			<div class="split"></div>
 			<span class="total-number" id="totalWeight"></span>
 		</div>
@@ -255,7 +255,7 @@
 	
 	function changeOrderType()
 	{
-		$.ajax({
+		JpUtilsAjax.get({
 			url: "/portal/iv/hq/parts/domestic/order/create/header_info",
 			data: "orderType=" + orderComponent.getSelectedOrderType() + "&priceGroup=" + orderComponent.getSelectedPriceGroup() + "&docType=" + orderComponent.getSelectedDocType(),
 		    success: function(response, textStatus, jqXHR)
@@ -302,7 +302,7 @@
 	
 	function setDefaultHeaderInfo()
 	{
-		$.ajax({
+		JpUtilsAjax.get({
 			url: "/portal/iv/hq/parts/domestic/order/create/header_info",
 		    success: function(response, textStatus, jqXHR)
 		    {
@@ -526,7 +526,7 @@
 	$("#BTN_upload").on("click", function() {
 		if ($("#shippingCondition").val() == "")
 		{
-			alert("[[#{HQPD_M_EMPTY_SHIPPING_INFO}]]");
+			alert("[[#{HQP_M_EMPTY_SHIPPING_INFO}]]");
 			return;
 		};		
 		
@@ -542,11 +542,11 @@
 	$("#BTN_priceInfo").on("click", function() {
 		if (!isDoneSimulation())
 		{
-			alert("[[#{HQPD_M_DO_SIMULATION_FOR_PRICE_INFO}]]");
+			alert("[[#{HQP_M_DO_SIMULATION_FOR_PRICE_INFO}]]");
 			return;
 		};
 	
-		Modal.show("[[#{HQPD_T_PRICE_INFO}]]", 700, 450, $("#pricingInfo").val());
+		Modal.show("[[#{HQP_T_PRICE_INFO}]]", 700, 450, $("#pricingInfo").val());
 	});
 	
 	$("#BTN_errorReport").on("click", function() {
@@ -557,14 +557,14 @@
 	
 		if ($("#poNo").val() == "")
 		{
-			alert("[[#{HQPD_M_EMPTY_PONO}]]");
+			alert("[[#{HQP_M_EMPTY_PONO}]]");
 			$("#poNo").focus();
 			return;
 		};	
 		
 		if (!isDoneSimulation())
 		{
-			alert("[[#{HQPD_M_DO_SIMULATION}]]");
+			alert("[[#{HQP_M_DO_SIMULATION}]]");
 			return;
 		};
 	
@@ -573,15 +573,15 @@
 			alert($("#blockMessage").val());
 		};
 		
-		let confirmMsg = "[[#{HQPD_M_CONFIRM_SAVE_ORDER}]]";
+		let confirmMsg = "[[#{HQP_M_CONFIRM_SAVE_ORDER}]]";
 		
 		if ($("#docType1").is(":checked"))
 		{
-			confirmMsg = confirmMsg.replace("{0}", "[[#{HQPD_T_ORDER}]]");
+			confirmMsg = confirmMsg.replace("{0}", "[[#{HQP_T_ORDER}]]");
 		}
 		else
 		{
-			confirmMsg = confirmMsg.replace("{0}", "[[#{HQPD_T_INQUIRY}]]");
+			confirmMsg = confirmMsg.replace("{0}", "[[#{HQP_T_INQUIRY}]]");
 		};
 		
 		if (!confirm(confirmMsg))
@@ -598,7 +598,7 @@
 		$("#uom").val(itemParameter.uoms.join("^"));
 		$("#availability").val(itemParameter.availabilities.join("^"));
 	
-		$.ajax({
+		JpUtilsAjax.post({
 			url: "/portal/iv/hq/parts/domestic/order/create/save",
 			method: "POST",
 			data: $("#FORM_order").serialize(),
@@ -615,12 +615,12 @@
 		    	if (orderNo != "")
 		    	{
 		    		let url = "order_detail";
-		    		let message = "[[#{HQPD_M_CREATE_ORDER_RESULT}]]".replace("{0}", orderNo);
+		    		let message = "[[#{HQP_M_CREATE_ORDER_RESULT}]]".replace("{0}", orderNo);
 
 		    		if ($("#docType2").is(":checked"))
 		    		{
 		    			url = "inquiry_list";
-		    			"[[#{HQPD_M_CREATE_INQUIRY_RESULT}]]".replace("{0}", orderNo);
+		    			"[[#{HQP_M_CREATE_INQUIRY_RESULT}]]".replace("{0}", orderNo);
 		    		};		    		
 		    		
 		    		alert(message);
@@ -633,7 +633,7 @@
 		    		
 		    		if (errorMsg == "DUPLICATED_ORDER")
 		    		{
-		    			errorMsg = "[[#{HQPD_M_EXIST_SAME_ORDER}]]";
+		    			errorMsg = "[[#{HQP_M_EXIST_SAME_ORDER}]]";
 		    		};
 
 		    		alert(errorMsg);
@@ -684,11 +684,11 @@
 						return "<input type='checkbox' class='custom-ui check-all' onchange='syncInput(this)'><label></label>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
-				{name: "lineNo", data: "lineNo", title: "[[#{HQPD_L_ITEM}]]"},//Item
+				{name: "lineNo", data: "lineNo", title: "[[#{HQP_L_ITEM}]]"},//Item
 				{
 					name: "materialNo",
 					data: "materialNo",
-					title: "[[#{HQPD_L_ORDER_PART_NO}]]",				
+					title: "[[#{HQP_L_ORDER_PART_NO}]]",				
 					width: 200,
 					orderable: false,
 					className:"center noselect",
@@ -697,12 +697,12 @@
 						return '<button class="btn-popup" type="button" onclick="showSearchPartsPopup(this)"></button><input type="text" name="materialNo" class="custom-ui" value="' + row.materialNo + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
-				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQPD_L_SUPPLY_PART_NO}]]", width: 200},//Supply Part No
-				{name: "description", data: "description", title: "[[#{HQPD_L_DESCRIPTION}]]"},//Description
+				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]", width: 200},//Supply Part No
+				{name: "description", data: "description", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
 				{
 					name: "orderQty",
 					data: "orderQty",
-					title: "[[#{HQPD_L_REQ_QTY}]]",
+					title: "[[#{HQP_L_REQ_QTY}]]",
 					orderable: false,
 					className: "center noselect",
 					render: function(data, type, row)
@@ -710,11 +710,11 @@
 						return '<input type="text" class="custom-ui" name="orderQty" style="width:70px" value="' + row.orderQty + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onkeyup="doSimulationByEnter(this)" onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},//Req Qty
-				{name: "lotQty", data: "lotQty", title: "[[#{HQPD_L_SALES_LOT}]]"},//Sales Lot
-				{name: "uom", data: "uom", title: "[[#{HQPD_L_UOM}]]"},//UoM
-				{name: "netPrice", data: "netPrice", title: "[[#{HQPD_L_UNIT_PRICE}]]"},//Net Price
-				{name: "netValue", data: "netValue", title: "[[#{HQPD_L_TOTAL_PRICE}]]"},//Net Value
-				{name: "availability", data: "availability", title: "[[#{HQPD_L_AVAILABILITY}]]"},//Availability
+				{name: "lotQty", data: "lotQty", title: "[[#{HQP_L_SALES_LOT}]]"},//Sales Lot
+				{name: "uom", data: "uom", title: "[[#{HQP_L_UOM}]]"},//UoM
+				{name: "netPrice", data: "netPrice", title: "[[#{HQP_L_UNIT_PRICE}]]"},//Net Price
+				{name: "netValue", data: "netValue", title: "[[#{HQP_L_TOTAL_PRICE}]]"},//Net Value
+				{name: "availability", data: "availability", title: "[[#{HQP_L_AVAILABILITY}]]"},//Availability
 			],
 			ajax: {
 				url: "/portal/iv/hq/parts/domestic/order/create/simulation",
@@ -808,7 +808,7 @@
 					
 					if (errorCnt > 0)
 					{
-						alert("[[#{HQPD_M_SIMULATION_ERROR}]]".replace("{0}", errorCnt));
+						alert("[[#{HQP_M_SIMULATION_ERROR}]]".replace("{0}", errorCnt));
 					};
 	
 					return normalOrderItems;
