--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/transfer_to_order.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/transfer_to_order.html
@@ -8,17 +8,17 @@
 	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
 	
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_ORDER_TRANSFER}"></div>
+		<div class="block-title" th:text="#{HQP_T_ORDER_TRANSFER}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button id="BTN_confirm" type="button" th:text="#{HQPD_B_CONFIRM}"></button>
+			<button id="BTN_confirm" type="button" th:text="#{HQP_B_CONFIRM}"></button>
 		</div>
 	</div>
 	
 	<div class="condition-area">
-	<table class="condition table-fixed">
+	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{	HQPD_L_ORDER_TYPE}"></th>
+				<th th:text="#{	HQP_L_ORDER_TYPE}"></th>
 				<td>
 					<div class="input-area order-type"></div>
 				</td>
