--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
@@ -6,28 +6,27 @@
 	
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_DELIVERY_STATUS_DETAIL}"></div><!-- Delivery Status Detail -->
+		<div class="block-title" th:text="#{HQP_T_DELIVERY_STATUS_DETAIL}"></div><!-- Delivery Status Detail -->
 		<div class="block-button-area">
-			<button id="BTN_download" type="button" th:text="#{HQPD_B_DOWNLOAD}"></button><!-- Download -->
-			<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->
-			<button id="BTN_back" type="button" th:text="#{HQPD_B_BACK}"></button><!-- Back -->
+			<button id="BTN_download" type="button" th:text="#{HQP_B_DOWNLOAD}"></button><!-- Download -->
+			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
+			<button id="BTN_back" type="button" th:text="#{HQP_B_BACK}" th:if="${not #strings.isEmpty(shipmentNo)}"></button><!-- Back -->
 		</div>
 	</div>
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-	<input type="hidden" name="pShipmentNo" th:value="${pShipmentNo}" />
 	
-	<table class="condition table-fixed">
+	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{HQPD_L_SHIPMENT_DOC_CREATE_DATE}"></th><!-- Shipment Doc. Create Date Period-->
+				<th th:text="#{HQP_L_SHIPMENT_DOC_CREATE_DATE}"></th><!-- Shipment Doc. Create Date Period-->
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
 						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">					
 					</div>
 				</td>
-				<th th:text="#{HQPD_L_ONBOARD_DATE}"></th><!-- Onboard Date Period -->
+				<th th:text="#{HQP_L_ONBOARD_DATE}"></th><!-- Onboard Date Period -->
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromOnboardDate" name="pFromOnboardDate" class="custom-ui-calendar" th:value="${pOnboardFromDate}">
@@ -36,13 +35,13 @@
 				</td>
 			</tr>			
 			<tr>
-				<th th:text="#{HQPD_L_SHIPMENT_NO}"></th>
+				<th th:text="#{HQP_L_SHIPMENT_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pShipmentNo2" name="pShipmentNo2" class="custom-ui" th:value="${pShipmentNo2}">
+						<input type="text" id="pShipmentNo" name="pShipmentNo" class="custom-ui" th:value="${pShipmentNo}">
 					</div>			
 				</td>			
-				<th th:text="#{HQPD_L_ORDER_NO}"></th>
+				<th th:text="#{HQP_L_ORDER_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pOrderNo" name="pOrderNo" class="custom-ui" th:value="${pOrderNo}">
@@ -50,13 +49,13 @@
 				</td>			
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_PART_NO}"></th>
+				<th th:text="#{HQP_L_PART_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}">
 					</div>			
 				</td>			
-				<th th:text="#{HQPD_L_PO_NO}"></th>
+				<th th:text="#{HQP_L_PO_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pPoNo" name="pPoNo" class="custom-ui" th:value="${pPoNo}">
@@ -91,19 +90,19 @@
 			scrollY: 100,
 			//fixedColumns: { leftColumns: 8 },
 			columns : [
-				{data: "TKNUM", title: "[[#{HQPD_L_SHIPMENT_NO}]]"},//Shipment No.				
-				{data: "EXIDV", title: "[[#{HQPD_L_HU_NO}]]"},//H.U. No.
-				{data: "MATNR_SO", title: "[[#{HQPD_L_ORDER_PART_NO}]]"},//Order Parts No.
-				{data: "MATNR_SH", title: "[[#{HQPD_L_SUPPLY_PART_NO}]]"},//Supply Parts No.
-				{data: "MAKTX", title: "[[#{HQPD_L_DESCRIPTION}]]"},//Description
-				{data: "LFIMG", title: "[[#{HQPD_L_QTY}]]", className: "right"},//Qty
-				{data: "NETPR", title: "[[#{HQPD_L_UNIT_PRICE}]]", className: "right"},//Unit Price
-				{data: "NETWR", title: "[[#{HQPD_L_TOTAL_AMOUNT}]]", className: "right"},//Amount
-				{data: "HERKL", title: "[[#{HQPD_L_ORIGIN}]]"},//Origin
-				{data: "VBELN2", title: "[[#{HQPD_L_SALES_DOC_NO}]]"},//Sales Doc. No.
-				{data: "ZFOBDT", title: "[[#{HQPD_L_ONBOARD_DATE}]]"},//Onboard Date
-				{data: "KWERT", title: "[[#{HQPD_L_FREIGHT_FEE}]]", className: "right"},//Freight Fee
-				{data: "BSTKD", title: "[[#{HQPD_L_PO_NO}]]"}//P.O. No.
+				{data: "TKNUM", title: "[[#{HQP_L_SHIPMENT_NO}]]"},//Shipment No.				
+				{data: "EXIDV", title: "[[#{HQP_L_HU_NO}]]"},//H.U. No.
+				{data: "MATNR_SO", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Parts No.
+				{data: "MATNR_SH", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Parts No.
+				{data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+				{data: "LFIMG", title: "[[#{HQP_L_QTY}]]", className: "right"},//Qty
+				{data: "NETPR", title: "[[#{HQP_L_UNIT_PRICE}]]", className: "right"},//Unit Price
+				{data: "NETWR", title: "[[#{HQP_L_TOTAL_AMOUNT}]]", className: "right"},//Amount
+				{data: "HERKL", title: "[[#{HQP_L_ORIGIN}]]"},//Origin
+				{data: "VBELN2", title: "[[#{HQP_L_SALES_DOC_NO}]]"},//Sales Doc. No.
+				{data: "ZFOBDT", title: "[[#{HQP_L_ONBOARD_DATE}]]"},//Onboard Date
+				{data: "KWERT", title: "[[#{HQP_L_FREIGHT_FEE}]]", className: "right"},//Freight Fee
+				{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"}//P.O. No.
 			],
 			ajax: {
 				url: "/portal/iv/hq/parts/domestic/order/delivery/view/data",
@@ -113,7 +112,7 @@
 					p.pToDate = $("#pToDate").val();
 					p.pFromOnboardDate = $("#pFromOnboardDate").val();
 					p.pToOnboardDate = $("#pToOnboardDate").val();
-					p.pShipmentNo2 = $("#pShipmentNo2").val();
+					p.pShipmentNo = $("#pShipmentNo").val();
 					p.pOrderNo = $("#pOrderNo").val();
 					p.pPartNo = $("#pPartNo").val();
 					p.pPoNo = $("#pPoNo").val();
