--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -8,43 +8,43 @@
 	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
 
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_ORDER_LIST}"></div>
+		<div class="block-title" th:text="#{HQP_T_ORDER_LIST}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->
+			<button type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
 		</div>
 	</div>
 	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
 	<input type="hidden" id="orderNo" name="orderNo"/>
-	<table class="condition table-fixed">
+	<table class="condition">
 		<tbody>
 			<tr>
 				<th colspan="4">
 					<div class="input-area">
 						<input type="radio" class="custom-ui" name="pDocType" value="C" checked/>
-						<label th:text="#{HQPD_L_ORDER}"></label>
+						<label th:text="#{HQP_L_ORDER}"></label>
 						
 						&nbsp;&nbsp;
 						
 						<input type="radio" class="custom-ui" name="pDocType" value="A"/>
-						<label id="LB_docType2" th:text="#{HQPD_L_INQUIRY}"></label>
+						<label id="LB_docType2" th:text="#{HQP_L_INQUIRY}"></label>
 						
 						&nbsp;&nbsp;
 						
 						<input type="radio" class="custom-ui" name="pDocType" value="B" />
-						<label id="LB_docType3" th:text="#{HQPD_L_QUOTATION}"></label>
+						<label id="LB_docType3" th:text="#{HQP_L_QUOTATION}"></label>
 					</div>
 				</th>
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_ORDER_NO}"></th>
+				<th th:text="#{HQP_L_ORDER_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pOrderNo" name="pOrderNo" class="custom-ui" th:value="${pOrderNo}">
 					</div>
 				</td>
-				<th th:text="#{HQPD_L_ORDER_TYPE}"></th>
+				<th th:text="#{HQP_L_ORDER_TYPE}"></th>
 				<td>
 					<div class="input-area order-type">
 						<!-- select class="custom-ui" id="pOrderType" name="pOrderType"></select -->
@@ -52,14 +52,14 @@
 				</td>
 			</tr>		
 			<tr>
-				<th th:text="#{HQPD_L_ORDER_DATE}"></th>
+				<th th:text="#{HQP_L_ORDER_DATE}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
 						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">
 					</div>
 				</td>
-				<th th:text="#{HQPD_L_PO_NO}"></th>
+				<th th:text="#{HQP_L_PO_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pPoNo" name="pPoNo" class="custom-ui" th:value="${pPoNo}">
@@ -100,14 +100,14 @@ $(function(){
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
 		columns : [
-			{data: "VBELN", title: "[[#{HQPD_L_ORDER_NO}]]", className: "link"},//Order No.
-			{data: "ZZAUKON", title: "[[#{HQPD_L_ORDER_TYPE}]]"},//Order Type
-			{data: "VTEXT2", title: "[[#{HQPD_L_SHIPPING_CONDITION}]]"},//Shipping Condition
-			{data: "BSTKD", title: "[[#{HQPD_L_PO_NO}]]"},//P.O. No.
-			{data: "ERDAT2", title: "[[#{HQPD_L_ORDER_DATE}]]"},//Create Date
-			{data: "COUNT", title: "[[#{HQPD_L_ORDER_ITEM_ROWS}]]", className: "right"},//Item Rows
-			{data: "T_NETWR", title: "[[#{HQPD_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
-			{data: "WAERK", title: "[[#{HQPD_L_CURR}]]"}//Curr.
+			{data: "VBELN", title: "[[#{HQP_L_ORDER_NO}]]", className: "link"},//Order No.
+			{data: "ZZAUKON", title: "[[#{HQP_L_ORDER_TYPE}]]"},//Order Type
+			{data: "VTEXT2", title: "[[#{HQP_L_SHIPPING_CONDITION}]]"},//Shipping Condition
+			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
+			{data: "ERDAT2", title: "[[#{HQP_L_ORDER_DATE}]]"},//Create Date
+			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]", className: "right"},//Item Rows
+			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
+			{data: "WAERK", title: "[[#{HQP_L_CURR}]]"}//Curr.
 		],
 		/*
 		columnDefs: [
